--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dingo/blueprint",
+    "name": "az-iar/blueprint",
     "description": "API Blueprint documentation generator.",
     "keywords": ["blueprint", "api", "laravel", "dingo", "docs"],
     "license": "BSD-3-Clause",
@@ -10,11 +10,11 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
-        "illuminate/support": "5.1.* || 5.2.* || 5.3.* || 5.4.*",
-        "illuminate/filesystem": "5.1.* || 5.2.* || 5.3.* || 5.4.*",
+        "php": ">= 7.0",
+        "illuminate/support": "5.3.* || 5.4.*",
+        "illuminate/filesystem": "5.3.* || 5.4.*",
         "doctrine/annotations": "~1.2",
-        "phpdocumentor/reflection-docblock": "3.1.*"
+        "phpdocumentor/reflection-docblock": "3.2.*"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "~2.0",
